@startuml
'https://plantuml.com/class-diagram
hide circle
class SubscriptionsRepository <<interface>>
class UserRepository <<interface>>



class Subscriptions {
    -startDate
    -endDate
    -paymentType
    -activeStatus
    +getPlan():Plan
}



class PlansViewMapper{
    +toPlansView(Plans plan):PlansView
}
class SubscriptionsController{
    planDetails():ResponseEntity<PlansView>
    }
class SubscriptionsService{
 +planDetails():Plan
}




interface UserRepository
{
+findById(Long objectId): Optional<User>
}


interface SubscriptionsRepository
{
+findByUser(User user): Optional<Subscriptions>
}



SubscriptionsController ..> SubscriptionsService: uses >
SubscriptionsService ..> SubscriptionsRepository: uses >
SubscriptionsService ..> UserRepository: uses >
SubscriptionsService ..> Subscriptions: uses >
SubscriptionsRepository ..> Subscriptions: < record
SubscriptionsController ..>PlansViewMapper: uses >
@enduml


